--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.7",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@heroicons/react": "^1.0.5",
+    "@mui/material": "^5.3.1",
     "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
